--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,11 @@ body {
   }
   
   th {
-    font-size: 20px;
+    border-style: solid;
+    border-color: black;  
+    font-size: 16px;
+    background-color: blue;
+    color: white;
     font-weight: 600;
     padding: 10px;
   }
