added a div class for season naming to change the font size and center it in css

--- a/views/season.pug
+++ b/views/season.pug
@@ -5,7 +5,7 @@ html
 
   body
     h1= title
-    div=`Season ${season.number}`
+    div(class="season")=`Season ${season.number}`
     table(id="season")
       tr  
         th No
