--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,23 @@
 body {
-    background-color: white
-    color: black
+    background-color: white;
+    color: black;
   }
   
+  h2 {
+    padding: 5px;
+    margin: 1ch;
+  }
+
+  .season {
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 1ch;
+  }
+
   table {
     border-collapse: collapse;
-    border-style: solid;
+    border-style: solid; 
     border-color: black;
     margin: 0 auto;
     width: 75%;
@@ -24,11 +36,13 @@ body {
   td {
        
     border: 1px solid black;
+    border-style: solid;
+    border-color: black;
     font-size: 16px;
     padding: 5px;
     text-align: left;
   }
-  
+
   .No {
     width: 10%;
     text-align: left;
