--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,7 @@ body {
     border-style: solid;
     border-color: black;  
     font-size: 16px;
-    background-color: blue;
+    background-color: rgb(0, 119, 255);
     color: white;
     font-weight: 600;
     padding: 10px;
